# BEETHOVEN-CLI

./: CMakeLists.txt  README.md
src/: main.cpp
